section10/grade-submission-portal/grade-submission-portal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grade-submission-portal
  namespace: grade-submission
spec:
  selector: # This links the service to the Pods to route traffic to.
    app.kubernetes.io/instance: grade-submission-portal
  type: ClusterIP  
  ports:
  - port: 5001 # The port that the service will expose inside the cluster.
    targetPort: 5001 # The port that the container is listening on.
