section10/grade-submission-portal/grade-submission-portal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grade-submission-portal-ingress
  namespace: grade-submission
spec:
  ingressClassName: nginx # This specifies the Ingress class to use, which is set to "nginx" in this case.
   # note that ingress-nginx controller was installed by using below command
   # kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.10.1/deploy/static/provider/cloud/deploy.yaml
  rules:
  - http: # Any HTTP request to the Ingress will be routed to the service set.
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: grade-submission-portal
            port: 
              number: 5001
  # The Ingress will route traffic to the service named "grade-submission-portal" on port 5001.
